<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">OrderPizza</string>
    <string name="toppings">Toppings</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="chocolate" translatable="false">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="orderButton">Order</string>
    <string name="email_subject">Order summary for </string>
    <string name="order_summary_name" translatable="false">Name : <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_quantity">Quantity : </string>
    <string name="order_summary_addChocolate">Chocolate added : </string>
    <string name="order_summary_addWhippedCream">Whipped Cream added : </string>
    <string name="thank_you">Thank You</string>
    <string name="nameHintPlaceHolder">Enter your name</string>
</resources>